--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -2,7 +2,7 @@
 @import '../../scss/colors.scss';
 
 .landing {
-  background-image: url(./images/hero-primary.png);
+  background-image: url(./images/landing-background.png);
   background-position-x: center;
   background-position-y: -70px;
   background-repeat: no-repeat;
