--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -7,7 +7,7 @@
   padding: 0 20px;
 
   &__wrapper {
-    padding-top: 143px;
+    margin-top: 100px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px 1fr));
     grid-template-rows: 1fr 1fr;
@@ -25,9 +25,7 @@
   }
 
   &__logo {
-    position: absolute;
-    left: 30px;
-    top: 30px;
+    margin-top: 30px;
   }
 
   &__left {
